--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                         <img src="c-logo.png" alt="C Logo" />
                         <span>C</span>
                         <div class="proficiency-bar">
-                            <div class="proficiency-fill" style="width: 85%"></div>
+                            <div class="proficiency-fill" style="width: 50%"></div>
                         </div>
-                        <span class="experience-years">3+ years</span>
+                        <span class="experience-years">1 year</span>
                     </div>
                     <div class="tool">
                         <img src="java-logo.png" alt="Java Logo" />
@@ -174,15 +174,15 @@
                         <div class="proficiency-bar">
                             <div class="proficiency-fill" style="width: 85%"></div>
                         </div>
-                        <span class="experience-years">3+ years</span>
+                        <span class="experience-years">2+ years</span>
                     </div>
                     <div class="tool">
                         <img src="python-logo.png" alt="Python Logo" />
                         <span>Python</span>
                         <div class="proficiency-bar">
-                            <div class="proficiency-fill" style="width: 85%"></div>
+                            <div class="proficiency-fill" style="width: 75%"></div>
                         </div>
-                        <span class="experience-years">3+ years</span>
+                        <span class="experience-years">2+ years</span>
                     </div>
                     <div class="tool">
                         <img src="html-logo.png" alt="HTML Logo" />
